# Python_Client

./: .flake8  CHANGELOG.md  README.md  pyproject.toml  tag_and_push.sh
setup/: setup.txt
solverai/: IdsDataManager.py  IdsFileManager.py  SolverAiClientCompute.py  SolverAiClientExceptions.py  SolverAiClientSetup.py  SolverAiComputeInput.py  SolverAiComputeResults.py  SolverAiResultsWriter.py  __init__.py  client_config.py  delete_everything.py
tests/: _solverai_test_support.py  test_client_compute.py  test_client_config.py  test_client_exceptions.py  test_client_setup.py  test_compute_input.py  test_compute_results.py  test_ids_data_manager.py  test_public_imports.py  test_results_writer.py
